--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts:
+  url_launcher:
+  http:
+  shared_preferences:
+  flutter_svg:
+  flutter_spinkit:
 
 dev_dependencies:
   flutter_test:
